Bug 1664010 - Increase the wait time before default-initing in AudioTrackEncoder. r=bryce

One second is a bit short given that starting bluetooth input devices takes
several seconds on some platforms. Bug 1586370 may have worsened this since we
now process silence while waiting for an input to give us data.

Differential Revision: https://phabricator.services.mozilla.com/D91140